--- a/index.html
+++ b/index.html
@@ -5,14 +5,190 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Hero || Project By NO NAME GROUP</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>HOME</h1>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-branch" href="#">
+                <img src="./image/Logo.png" height="75">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Connect</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Carousel -->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slides" data-slide-to="0" class="active"></li>
+            <li data-target="#slides" data-slide-to="1"></li>
+            <li data-target="#slides" data-slide-to="2"></li>
+            <li data-target="#slides" data-slide-to="3"></li>
+        </ul>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./image/Natural1.png">
+                <div class="carousel-caption">
+                    <h1 class="display-2"></h1>
+                    <h3>Green Hero Blog</h3>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./image/Natural2.png">
+            </div>
+            <div class="carousel-item">
+                <img src="./image/Natural3.png">
+            </div>
+            <div class="carousel-item">
+                <img src="./image/Natural4.png">
+            </div>
+        </div>
+    </div>
+    <!-- intro-->
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Welcome to our blog</h1>
+            </div>
+            <!-- Horizontal Rule -->
+            <hr>
+            <div class="col-12">
+                <p>Today, environmental pollution is becoming a central issue of the whole society and is paid great attention by the public. Environmental pollution is happening day by day and it is becoming more and more complicated. Environmental pollution has left enormous consequences for all mankind.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- Meet our team number-->
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Meet our team members</h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <!--Infor leader-->
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="./images/.png">
+                    <div class="card-body">
+                        <h4 class="card-title">Lien Hoang</h4>
+                        <p class="card-text">Hoang Thi Thuy Lien is a leader in team No Name</p>
+                        <a href="#" class="btn btn-outline-secondary">See profile</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="./images/.png">
+
+                    <div class="card-body">
+                        <h4 class="card-title">Nghi Pham</h4>
+                        <p class="card-text">Nghi is a web developer in team No Name</p>
+                        <a href="#" class="btn btn-outline-secondary">See profile</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="./images/png">
+                    <div class="card-body">
+                        <h4 class="card-title">Hao Nguyen</h4>
+                        <p class="card-text">Hao is a web designer in team No Name</p>
+                        <a href="#" class="btn btn-outline-secondary">See profile</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="./images/png">
+                    <div class="card-body">
+                        <h4 class="card-title">Di Huynh</h4>
+                        <p class="card-text">Di is a web designer in team No Name</p>
+                        <a href="#" class="btn btn-outline-secondary">See profile</a>
+                    </div>
+                </div>
+            </div>
+            <!--Contact-->
+            <div class="container-fluid padding">
+                <div class="row text-center padding">
+                    <div class="col-12">
+                        <h2>Contact us</h2>
+                    </div>
+                    <div class="col-12 social padding">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End web-->
+<footer>
+	<div class="container-fluid padding">	
+		<div class="row text-center">
+			<div class="col-md-4">
+				<img src="./image/Logo.png"height="65">
+				<hr class="light">
+				<p>033-7470-726</p>
+				<p>haonguyenc4@gmail.com</p>
+				<p>Cho Lach, Ben Tre, Vietnam</p>
+			</div>
+			<div class="col-md-4">				
+				<hr class="light">
+				<h5>Working hours</h5>
+				<hr class="light">
+				<p>Monday-Friday: 8am - 5pm</p>
+				<p>Weekend: 8am - 12am</p>
+			</div>
+			<div class="col-md-4">				
+				<hr class="light">
+				<h5>Services</h5>
+				<hr class="light">
+				<p>Outsourcing</p>
+				<p>Website development</p>
+				<p>Mobile applications</p>
+			</div>
+			<div class="col-12">
+				<hr class="light-100">
+				<h5>&copy; NoName</h5>
+			</div>
+		</div>
+	</div>
+</footer>
 </body>
 
 </html>
